--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/stack": "^7.0.12",
+    "@types/react-native": "^0.72.8",
     "expo": "~52.0.11",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -52,7 +53,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "private": true
 }
